--- a/lifebox/lib/l10n/app_zh.arb
+++ b/lifebox/lib/l10n/app_zh.arb
@@ -2,6 +2,16 @@
   "@@locale": "zh",
   "settings_title": "设置",
   "language_title": "语言",
+  "language_jp": "日文",
+  "language_zh": "中文",
+  "language_en": "英文",
+  "clear": "清除",
+  "delete": "删除",
+  "cancel": "取消",
+  "save":"保存",
+  "finish":"完成",
+  "deleteConfirm": "确定要删除吗？",
+  "deleteConfirmTitle": "确定删除",
   "language_subtitle": "切换显示语言",
   "upload_policy_title": "仅上传 OCR 文本（默认开）",
   "upload_policy_subtitle": "隐私友好：默认不上传原图（后续可配置）",
@@ -19,6 +29,10 @@
   "logout_OK": "退出登录",
   "not_logged_in": "未登录",
   "no_name": "用户 {name}",
+
+  "no_title": "(无标题)' ",
+  "another": "其他 ",
+
   "app_name": "Life Inbox",
   "terms_agree_prefix": "继续即表示同意",
   "open_terms_action": "TODO：打开服务条款",
@@ -26,7 +40,7 @@
   "terms_and": " 与 ",
   "open_privacy_action": "TODO：打开隐私政策",
   "privacy_title": "隐私政策",
-  "common_Cancel": "取消",
+  "cancel": "取消",
   "common_mail": "邮箱",
   "common_mail_hit": "example@email.com",
   "common_password": "密码",
@@ -300,6 +314,7 @@
   "setting_clear_confirm_desc": "这将清除本地缓存数据（示例占位）。",
   "setting_clear_ok": "清除",
   "setting_clear_done": "已清除（示例：后续接入真实清理逻辑）",
+  "setting_group": "组管理（收费）",
 
   "input_valid_mail_must":"请输入邮箱。",
   "input_valid_mail_format":"请输入正确的邮箱",
@@ -322,5 +337,79 @@
   "cloud_feature_offline": "本机仍可离线使用",
   "cloud_price_monthly": "价格：¥300/月（Mock）",
   "subscription_restore": "恢复购买",
-  "subscription_subscribe": "订阅并开启"
+  "subscription_subscribe": "订阅并开启",
+
+  "paywallTitle": "高级版（付费）",
+  "paywallDesc": "使用群组管理、云端保存等功能\n需要开通高级版。",
+  "loadingText": "加载中...",
+  "planMonthly": "月度套餐",
+  "planYearly": "年度套餐",
+  "restorePurchase": "恢复购买（Restore）",
+  "cancelGuideTitle": "取消订阅请到 App Store / Google Play 的订阅管理",
+  "cancelGuideSubtitle": "应用内无法取消订阅",
+  "notNow": "暂不",
+
+  "personalInfoTitle": "个人信息",
+  "profileImage": "头像",
+  "nickname": "昵称",
+  "joinGroupTitle": "加入群组",
+  "joinGroupHelp": "请联系群组管理员发送邀请\n（群组设置 ＞ 添加成员）",
+  "joinGroupHint": "请输入邀请码",
+  "joinGroupCodeEmpty": "请输入邀请码",
+  "joinGroupJoined": "已加入",
+
+  "groupCreateTitle": "创建群组",
+  "groupSettingsTitle": "群组设置",
+  "groupMembers": "群组成员",
+  "groupOwnerLabel": "群主",
+  "groupMemberLabel": "普通成员",
+
+  "ownerOnlyCanChange": "仅群主可修改",
+  "ownerOnlyCanAdd": "仅群主可添加成员",
+  "ownerOnlyCanDelete": "仅群主可删除",
+
+  "groupNameInputTitleCreate": "请输入群组名称",
+  "groupNameInputTitleEdit": "群组名称",
+  "groupNameEmpty": "请输入群组名称",
+  "groupCreated": "已创建群组",
+  "addMember": "添加成员",
+
+  "inviteSmsNotImplemented": "通过短信邀请（未实现）",
+  "inviteEmailNotImplemented": "通过邮件邀请（未实现）",
+
+  "deleteGroupTitle": "删除群组",
+  "noPermission": "没有权限",
+
+  "memberTransferOwner": "转让群主",
+  "memberRemove": "移除成员",
+  "memberRemoved": "已移除",
+  "ownerTransferred": "已转让群主",
+  "deleteApiNotConnected": "删除 API 未接入",
+
+  "swipeMarkDone": "标记完成",
+  "swipeRestore": "恢复待办",
+
+  "groupManage": "群组管理",
+  "nogroup": "还没有群组",
+  "joinGroup": "加入群组",
+
+  "inviteChooseMethodTitle": "选择邀请方式",
+  "inviteMethodAccount": "应用账号",
+  "inviteMethodSms": "短信",
+  "inviteMethodEmail": "电子邮件",
+  "inviteMethodCode": "邀请码",
+  "inviteCodeCopied": "已复制邀请码",
+
+  "account": "账号",
+  "inputAccount": "请输入账号邮箱",
+  "inputName": "请输入成员显示名",
+  "displayname": "显示名",
+
+  "speechSavedToLocalInbox": "已保存到本地 Inbox",
+  "speechAnalyzeFailed": "语音解析失败：{error}",
+  "speechMockTitle": "模拟语音文本",
+  "speechMockCustomInputLabel": "自定义输入（优先）",
+  "speechMockUseInput": "使用输入",
+  "speechParsing": "解析中...",
+  "speechMockTooltip": "模拟语音文本"
 }
