add cloud delete

--- a/lifebox/lib/l10n/app_en.arb
+++ b/lifebox/lib/l10n/app_en.arb
@@ -371,6 +371,7 @@
   "joinGroupJoined": "Joined",
 
   "groupCreateTitle": "Create group",
+  "groupName": "Group Name",
   "groupSettingsTitle": "Group settings",
   "groupMembers": "Group members",
   "groupOwnerLabel": "Owner",
