--- a/lifebox/lib/l10n/app_ja.arb
+++ b/lifebox/lib/l10n/app_ja.arb
@@ -43,8 +43,8 @@
   "no_title": "(タイトルなし)' ",
   "another": "その他 ",
 
-  "version_text": "Life Inbox • v0.1.0 (MVP)",
-  "app_name": "Life Inbox",
+  "version_text": "スッと　• v0.1.0 (MVP)",
+  "app_name": "スッと",
   "terms_agree_prefix": "続行すると、以下に同意したものとみなされます。",
   "open_terms_action": "TODO：利用規約を開く",
   "terms_title": "利用規約",
@@ -57,7 +57,7 @@
   "common_or": "または",
   "common_password_hit": "パスワードを入力してください",
   "type_label": "種類",
-  "version_text": "Life Inbox • v0.1.0 (MVP)",
+  "version_text": "スッと • v0.1.0 (MVP)",
   "login_title":"おかえりなさい",
   "login_subtitle":"ログインすると、スクリーンショットを取り込み、タスクやリスクを自動で検出し、アプリロックでプライバシーを保護できます。",
   "login_logining":"ログイン中...",
@@ -108,6 +108,9 @@
   "ocr_no_current": "実行中のタスクはありません",
   "ocr_queued_prefix": "待機：",
   "ocr_queue_empty": "待機中なし",
+  "login_already_have_account":"すでにアカウントをお持ちですか？",
+  "login_to_login":"ログインへ",
+  "terms_must_agree":"利用規約とプライバシーポリシーに同意してください。",
 
   "ocrResultsTitle": "OCR結果（{count}）",
   "@ocrResultsTitle": {
@@ -226,7 +229,7 @@
   "inboxDetailEvidenceTitle": "解析根拠（OCR 断片）",
   "inboxDetailOcrPlaceholder": "OCR: ...（後ほどローカルOCRキャッシュと連携して表示）",
 
-  "inboxTitle": "Life Inbox",
+  "inboxTitle": "スッと　気持ちが軽くなる",
 
   "inboxEmptyTitle": "まだ内容がありません",
   "inboxEmptySubtitle": "スクリーンショットをインポートするか、音声ボタンを長押しして始めましょう",
@@ -435,8 +438,8 @@
   "holidaysLoading": "祝日を読み込み中…",
 
   "copied": "コピーした",
-  "groupInviteMessage": "LifeBoxのグループに招待されています。以下の招待コードを使って参加できます。",
+  "groupInviteMessage": "スッとのグループに招待されています。以下の招待コードを使って参加できます。",
   "inviteCodeLabel": "招待コード",
-  "groupInviteEmailSubject": "LifeBox グループへの招待",
+  "groupInviteEmailSubject": "スッと グループへの招待",
   "joinGroupFailed":"招待コードが無効、または期限切れです。"
 }
